--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,7 +23,8 @@ $pink: #f66d9b;
 //$red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
-$green: #00ff00;
+$green: #74cf74;
+$hacker-green: #00ff00;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $main-blue: #4d89ff;
