--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -184,6 +184,11 @@
     }
 }
 
+.profile-img {
+    height: 293px;
+    width: 293px;
+}
+
 @media only screen and (max-width: 768px) {
     .private-profile-main-container {
         height: 100%;
