building out image logic

--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -187,6 +187,8 @@
 .profile-img {
     height: 293px;
     width: 293px;
+    object-fit: cover;
+    object-position: center;
 }
 
 @media only screen and (max-width: 768px) {
