--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10757,6 +10757,10 @@ form .player-search-select {
 .profile-img {
   height: 293px;
   width: 293px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 @media only screen and (max-width: 768px) {
