--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10761,6 +10761,66 @@ form .player-search-select {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+  position: relative;
+}
+
+.profile-img-test {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: red;
+}
+
+.doc {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 0;
+}
+.doc:before {
+  content: "";
+  transition: 0.3s;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.doc .links {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.doc .links i {
+  font-size: 35px;
+  margin: 0 auto;
+  position: relative;
+  padding: 15px;
+}
+
+.doc a {
+  color: #fff;
+  position: relative;
+  text-decoration: none;
+}
+
+.doc span {
+  font-size: 16px;
+}
+
+.doc:hover:before {
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.doc:hover .links {
+  opacity: 1;
 }
 
 @media only screen and (max-width: 768px) {
