--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,8 @@ $body-bg: #faf9f8;
 //$body-bg: #2f3136;
 //$body-bg: #36393f;
 
+// good gray color use for emails? #565a5c
+
 // Typography
 //$font-family-sans-serif: 'Nunito', sans-serif;
 //$font-family-sans-serif: "Roboto", sans-serif;
