--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -184,75 +184,56 @@
     }
 }
 
+// profile image
+
+.profile-img-container {
+    position: relative;
+    height: 293px;
+    width: 293px;
+}
+
 .profile-img {
     height: 293px;
     width: 293px;
     object-fit: cover;
     object-position: center;
-    position: relative;
 }
 
-.profile-img-test {
+.profile-img-comment-icon {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    color: red;
-}
-
-// image hover effect
-.doc {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 0;
-    &:before {
-        content: "";
-        transition: 0.3s;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0);
-    }
-}
-.doc .links {
+    top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: none;
     overflow: hidden;
-    opacity: 0;
-    transition: 0.2s;
+    z-index: 2;
 }
-.doc .links i {
-    font-size: 35px;
-    margin: 0 auto;
-    position: relative;
-    padding: 15px;
+
+.profile-img-overlay {
+    height: 293px;
+    width: 293px;
+    background: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    z-index: 1;
 }
-.doc a {
-    color: #fff;
-    position: relative;
-    text-decoration: none;
-}
-.doc {
-    span {
-        font-size: 16px;
+
+.profile-img-container:hover {
+    cursor: pointer;
+    .profile-img-comment-icon {
+        transition: 0.3s;
+        display: block;
+    }
+    .profile-img-overlay {
+        transition: 0.3s;
+        display: block;
     }
 }
-.doc {
-    &:hover {
-        &:before {
-            opacity: 1;
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-        .links {
-            opacity: 1;
-        }
-    }
-}
-// end image hover effect
 
 @media only screen and (max-width: 768px) {
     .private-profile-main-container {
