building messaging logic

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10062,11 +10062,12 @@ nav .inbox-container {
 nav .inbox-notification-bubble {
   position: absolute;
   background: #74cf74;
-  height: 7px;
-  width: 7px;
+  height: 8px;
+  width: 8px;
   border-radius: 50%;
+  border: 1px solid #fff;
   top: 7px;
-  left: 22px;
+  left: 21px;
 }
 
 .main-header {
