building messaging logic

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,7 @@ $body-bg: #faf9f8;
 // dark
 //$body-bg: #2f3136;
 //$body-bg: #36393f;
+//$body-bg: #202124;
 
 // good gray color use for emails? #565a5c
 
