--- a/resources/sass/pages/_inbox.scss
+++ b/resources/sass/pages/_inbox.scss
@@ -1,3 +1,7 @@
+.conversation-sidebar {
+    min-height: calc(100vh - 56px);
+}
+
 .search-conversation-input {
     outline: 1px solid $main-blue !important;
     border: 1px solid $main-blue !important;
@@ -26,6 +30,8 @@
     padding: 0.4rem;
     bottom: 1rem;
     margin: 1rem;
+    // overflow-x: hidden;
+    // overflow-y: scroll;
 }
 
 @media only screen and (max-width: 768px) {
