--- a/resources/sass/pages/_inbox.scss
+++ b/resources/sass/pages/_inbox.scss
@@ -30,8 +30,12 @@
     padding: 0.4rem;
     bottom: 1rem;
     margin: 1rem;
-    // overflow-x: hidden;
-    // overflow-y: scroll;
+}
+
+.convo-test {
+    overflow: scroll;
+    max-height: 82vh;
+    margin-bottom: 5rem;
 }
 
 @media only screen and (max-width: 768px) {
