--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10871,7 +10871,7 @@ form .player-search-select {
   margin: 1rem;
 }
 
-.convo-test {
+.conversation-messages-container {
   overflow: scroll;
   max-height: 82vh;
   margin-bottom: 5rem;
