--- a/resources/sass/pages/_inbox.scss
+++ b/resources/sass/pages/_inbox.scss
@@ -32,7 +32,7 @@
     margin: 1rem;
 }
 
-.convo-test {
+.conversation-messages-container {
     overflow: scroll;
     max-height: 82vh;
     margin-bottom: 5rem;
