building images logic

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10414,6 +10414,16 @@ form .player-search-select {
   max-height: 293px;
 }
 
+.image-comment-link {
+  text-decoration: none;
+  color: #212529;
+}
+
+.image-comment-link:hover {
+  text-decoration: none;
+  color: #212529;
+}
+
 .section-1 {
   background: #5409c8;
   height: 650px;
