--- a/resources/sass/components/_modals.scss
+++ b/resources/sass/components/_modals.scss
@@ -20,3 +20,12 @@
     overflow: scroll;
     max-height: 293px;
 }
+
+.image-comment-link {
+    text-decoration: none;
+    color: #212529;
+}
+.image-comment-link:hover {
+    text-decoration: none;
+    color: #212529;
+}
