building images logic

--- a/resources/sass/components/_modals.scss
+++ b/resources/sass/components/_modals.scss
@@ -21,11 +21,6 @@
     max-height: 293px;
 }
 
-.image-comment-link {
-    text-decoration: none;
-    color: #212529;
-}
-.image-comment-link:hover {
-    text-decoration: none;
-    color: #212529;
+.image-comment-photo:hover {
+    cursor: pointer;
 }
