--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10414,14 +10414,8 @@ form .player-search-select {
   max-height: 293px;
 }
 
-.image-comment-link {
-  text-decoration: none;
-  color: #212529;
-}
-
-.image-comment-link:hover {
-  text-decoration: none;
-  color: #212529;
+.image-comment-photo:hover {
+  cursor: pointer;
 }
 
 .section-1 {
