--- a/resources/sass/components/_modals.scss
+++ b/resources/sass/components/_modals.scss
@@ -24,3 +24,9 @@
 .image-comment-photo:hover {
     cursor: pointer;
 }
+
+.send-squad-invite-squad:hover {
+    cursor: pointer;
+    color: $main-blue;
+    background-color: $main-white;
+}
