building squads logic

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10424,6 +10424,10 @@ form .player-search-select {
   background-color: #f6f7f9;
 }
 
+.number-of-squads {
+  font-size: 1rem;
+}
+
 .section-1 {
   background: #5409c8;
   height: 650px;
