building squads logic

--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -1,6 +1,6 @@
-.private-profile-main-container {
-    height: calc(100vh - 56px);
-}
+// .private-profile-main-container {
+//     height: calc(100vh - 56px);
+// }
 
 .private-profile-sidebar-container {
     width: 25%;
