building squads logic

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10898,3 +10898,17 @@ form .player-search-select {
     width: 95%;
   }
 }
+.squad-invites-container {
+  position: relative;
+}
+
+.pending-squad-invite-notification-bubble {
+  position: absolute;
+  background: #74cf74;
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  top: 0px;
+  right: -5px;
+}
