--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10908,7 +10908,7 @@ form .player-search-select {
   height: 8px;
   width: 8px;
   border-radius: 50%;
-  border: 1px solid #fff;
+  border: 1px solid #4d89ff;
   top: 0px;
-  right: -5px;
+  right: 3px;
 }
