--- a/resources/sass/pages/_squads.scss
+++ b/resources/sass/pages/_squads.scss
@@ -8,7 +8,7 @@
     height: 8px;
     width: 8px;
     border-radius: 50%;
-    border: 1px solid #fff;
+    border: 1px solid $main-blue;
     top: 0px;
-    right: -5px;
+    right: 3px;
 }
