--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10915,9 +10915,16 @@ form .player-search-select {
 
 .squad-card {
   width: 18rem;
+  box-shadow: 0 5px 10px rgba(79, 82, 177, 0.35);
 }
 
 .squad-card:hover {
   border: 1px solid #4d89ff;
   transition: 0.5s;
+  box-shadow: none;
+}
+
+.squad-card a {
+  color: #050505;
+  text-decoration: none;
 }
