--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Manrope&family=Roboto+Mono&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Corinthia&family=Major+Mono+Display&family=Manrope&family=Roboto&family=Smooch&family=VT323&display=swap);
 @charset "UTF-8";
 *,
 *:before,
@@ -10941,4 +10941,20 @@ form .player-search-select {
 
 .banner-squad-name {
   font-size: 54px;
+}
+
+.banner-font-corinthia {
+  font-family: "Corinthia", cursive;
+}
+
+.banner-font-major {
+  font-family: "Major Mono Display", monospace;
+}
+
+.banner-font-smooch {
+  font-family: "Smooch", cursive;
+}
+
+.banner-font-vt323 {
+  font-family: "VT323", monospace;
 }
