--- a/resources/sass/pages/_squad.scss
+++ b/resources/sass/pages/_squad.scss
@@ -9,3 +9,16 @@
 .banner-squad-name {
     font-size: 54px;
 }
+
+.banner-font-corinthia {
+    font-family: "Corinthia", cursive;
+}
+.banner-font-major {
+    font-family: "Major Mono Display", monospace;
+}
+.banner-font-smooch {
+    font-family: "Smooch", cursive;
+}
+.banner-font-vt323 {
+    font-family: "VT323", monospace;
+}
