--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,8 @@
 // Fonts
 //@import url("https://fonts.googleapis.com/css?family=Nunito");
 //@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Manrope&family=Roboto+Mono&display=swap");
+//@import url("https://fonts.googleapis.com/css2?family=Manrope&family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Corinthia&family=Major+Mono+Display&family=Manrope&family=Roboto&family=Smooch&family=VT323&display=swap");
 
 // Variables
 @import "variables";
