--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10929,6 +10929,10 @@ form .player-search-select {
   text-decoration: none;
 }
 
+.banner-container {
+  margin-bottom: 6rem;
+}
+
 .banner-photo {
   height: 64px;
   width: 64px;
