--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10575,6 +10575,10 @@ form .player-search-select {
   text-decoration: none !important;
 }
 
+.private-profile-main-container {
+  min-height: calc(100vh - 56px);
+}
+
 .private-profile-sidebar-container {
   width: 25%;
   background: #f4f5f7;
