--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10428,6 +10428,10 @@ form .player-search-select {
   font-size: 1rem;
 }
 
+.icon-test {
+  font-size: 5rem;
+}
+
 .section-1 {
   background: #5409c8;
   height: 650px;
