--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,6 +29,7 @@
 @import "components/modals";
 
 // Page-specific styles
+@import "pages/admin_portal";
 @import "pages/home";
 @import "pages/login-help";
 @import "pages/private_profile";
